terraform/aws/apne3/resolver.tf
resource "aws_security_group" "resolver_inbound" {
  name_prefix = "bunshin-resolver-in-"
  description = "Route53 Resolver INBOUND endpoint SG"
  vpc_id      = aws_vpc.apne3.id

  tags = merge(local.common_tags, {
    Name    = "bunshin-apne3-resolver-inbound"
    Service = "resolver-endpoint"
  })

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_security_group_rule" "resolver_inbound_ingress_tcp" {
  # checkov:skip=CKV_BUNSHIN_1:Resource does not support tags
  type              = "ingress"
  from_port         = 53
  to_port           = 53
  protocol          = "tcp"
  cidr_blocks       = ["35.199.192.0/19"]
  security_group_id = aws_security_group.resolver_inbound.id
  description       = "DNS TCP from Cloud DNS forwarder source range"
}

resource "aws_security_group_rule" "resolver_inbound_ingress_udp" {
  # checkov:skip=CKV_BUNSHIN_1:Resource does not support tags
  type              = "ingress"
  from_port         = 53
  to_port           = 53
  protocol          = "udp"
  cidr_blocks       = ["35.199.192.0/19"]
  security_group_id = aws_security_group.resolver_inbound.id
  description       = "DNS UDP from Cloud DNS forwarder source range"
}

resource "aws_security_group" "resolver_outbound" {
  name_prefix = "bunshin-resolver-out-"
  description = "Route53 Resolver OUTBOUND endpoint SG"
  vpc_id      = aws_vpc.apne3.id

  tags = merge(local.common_tags, {
    Name    = "bunshin-apne3-resolver-outbound"
    Service = "resolver-endpoint"
  })

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_security_group_rule" "resolver_outbound_egress_tcp" {
  # checkov:skip=CKV_BUNSHIN_1:Resource does not support tags
  type              = "egress"
  from_port         = 53
  to_port           = 53
  protocol          = "tcp"
  cidr_blocks       = var.gcp_forwarder_subnet_cidrs
  security_group_id = aws_security_group.resolver_outbound.id
  description       = "DNS TCP to GCP inbound forwarder subnets"
}

resource "aws_security_group_rule" "resolver_outbound_egress_udp" {
  # checkov:skip=CKV_BUNSHIN_1:Resource does not support tags
  type              = "egress"
  from_port         = 53
  to_port           = 53
  protocol          = "udp"
  cidr_blocks       = var.gcp_forwarder_subnet_cidrs
  security_group_id = aws_security_group.resolver_outbound.id
  description       = "DNS UDP to GCP inbound forwarder subnets"
}

resource "aws_route53_resolver_endpoint" "inbound" {
  name      = "bunshin-apne3-inbound"
  direction = "INBOUND"

  security_group_ids = [aws_security_group.resolver_inbound.id]

  ip_address {
    subnet_id = aws_subnet.apne3_private[0].id
  }

  ip_address {
    subnet_id = aws_subnet.apne3_private[1].id
  }

  tags = merge(local.common_tags, {
    Name    = "bunshin-apne3-inbound"
    Service = "resolver-endpoint"
  })
}

resource "aws_route53_resolver_endpoint" "outbound" {
  name      = "bunshin-apne3-outbound"
  direction = "OUTBOUND"

  security_group_ids = [aws_security_group.resolver_outbound.id]

  ip_address {
    subnet_id = aws_subnet.apne3_private[0].id
  }

  ip_address {
    subnet_id = aws_subnet.apne3_private[1].id
  }

  tags = merge(local.common_tags, {
    Name    = "bunshin-apne3-outbound"
    Service = "resolver-endpoint"
  })
}
